--- a/sc_Scoreboard/ScoreBoard.html
+++ b/sc_Scoreboard/ScoreBoard.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="score-board">
-            <h3>GUEST</h3>
+            <h3>AWAY</h3>
             <div id="guest-score" class="score-el">
             </div>
             <div class="score-btns">
